<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_all"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_online"
            android:icon="@drawable/ic_all"
            android:title="@string/online" />
        <item
            android:id="@+id/nav_khela"
            android:icon="@drawable/ic_sports"
            android:title="@string/khela_dhula" />
        <item
            android:id="@+id/nav_bideshe"
            android:icon="@drawable/ic_bidesh"
            android:title="@string/bidesh" />
        <item
            android:id="@+id/nav_shikkha"
            android:icon="@drawable/ic_sports"
            android:title="@string/shikkha" />
        <item
            android:id="@+id/nav_banijjo"
            android:icon="@drawable/ic_sports"
            android:title="@string/banijjo" />
        <item
            android:id="@+id/nav_chakri"
            android:icon="@drawable/ic_sports"
            android:title="@string/chakri" />
        <item
            android:id="@+id/nav_binodon"
            android:icon="@drawable/ic_binodon"
            android:title="@string/binodon" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/rate" />
        </menu>
    </item>

</menu>
